# cisl-pypolp

./: .gitignore  README.md  main.py  pyproject.toml  user_config.ini
scripts/: solve_dummy.py  solve_dw_pownet.py  solve_dw_pownet_gurobi.py  solve_dw_single_instance.py  solve_pownet.py  test_admm.py  test_lagrangian.py  test_mpi.py  test_multiprocessing.py  test_random_problem.py
src/pypolp/: config.py  functions.py  main.py  optim.py  parser.py  problem_class.py  untitled0.py
src/pypolp/dw/: dw.py  master.py  record.py  subproblems.py
src/pypolp/problems/: dantzig_wolfe.py  functions.py  simple.py
src/pypolp/tools/: functions.py  parser.py
