[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cisl-pypolp"
version = "1.0.0"
description = "A meta-solver to decompose optimization problems."
readme = "README.md"
authors = [{ name = "Phumthep Bunnak", email = "pb585@cornell.edu" }]
keywords = ["dantzig_wolfe", "optimization", "decomposition"]
dependencies = [
    "matplotlib >= 3.7.1",
    "numpy >= 1.24.3",
    "pandas >= 1.5.3",
    "mplcursors >= 0.5.1",
    "pyomo >= 6.5.0",
    "gurobipy >= 10.0.1",
    "scipy" >= 1.10.1
]
requires-python = ">=3.10"